--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     container: pandoc/latex
     steps:
-      - uses: actions/checkout@v2
+      - name: checkout repository code
+        uses: actions/checkout@v2
       - name: Install mustache (to update the date)
         run:  apk add ruby && gem install mustache
       - name: creates output
