--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     container: pandoc/latex
     steps:
-      - name: checkout repository code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       - name: Install mustache (to update the date)
         run:  apk add ruby && gem install mustache
       - name: creates output
