--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,11 +11,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: pandoc/latex
+#    container: pandoc/latex
     steps:
       - uses: actions/checkout@v2
-      - name: Install mustache (to update the date)
-        run:  apk add ruby && gem install mustache
+      - name: check directory
+        run: ls -al 
+#      - name: Install mustache (to update the date)
+#        run:  apk add ruby && gem install mustache
       - name: creates output
         run:  sh ./build.sh
       - name: Pushes to another repository
