--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,18 +21,20 @@ jobs:
 #        run:  apk add ruby && gem install mustache
     - name: creates output
       run:  sh ./build.sh
-#    - name: Pushes to another repository
+    - name: Pushes to another repository
 #      id: push_directory
-#      uses: levansang/push-to-another-repository-example@main
-#      env:
-#        API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
-#      with:
-#        source-directory: output/
-#        destination-github-username: 'levansang'
-#        destination-repository-name: 'TestPushing01'
-#        user-email: levansang8689@gmail.com
-#        commit-message: See ORIGIN_COMMIT from $GITHUB_REF
-#        target-branch: main
+      uses: levansang/push-to-another-repository-example@main
+      env:
+        API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+      with:
+        source-directory: output/
+        destination-github-username: 'levansang'
+        destination-repository-name: 'TestPushing01'
+        destination-repository-username: 'levansang'
+        target-branch: 'main'
+        user-email: levansang8689@gmail.com
+        commit-message: See ORIGIN_COMMIT from $GITHUB_REF
+        target-branch: main
 #    - name: Test get variable exported by push-to-another-repository
 #      run: echo $DESTINATION_CLONED_DIRECTORY
 
