--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,13 +27,13 @@ jobs:
       env:
         API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
       with:
-        source-directory: output/
-        destination-github-username: 'levansang'
-        destination-repository-name: 'TestPushing01'
+        source_file: output/
+        user_name: 'levansang'
+        destination_repo: 'TestPushing01'
 #        destination-repository-username: 'levansang'
-        user-email: levansang8689@gmail.com
-        commit-message: See ORIGIN_COMMIT from $GITHUB_REF
-        target-branch: main
+        user_email: levansang8689@gmail.com
+        commit_message: See ORIGIN_COMMIT from $GITHUB_REF
+        destination_branch: main
 #    - name: Test get variable exported by push-to-another-repository
 #      run: echo $DESTINATION_CLONED_DIRECTORY
 
