--- a/action.yml
+++ b/action.yml
@@ -1,37 +1,37 @@
 name: 'Push a file to another repository'
 description: 'Used for pushing a copy of a file to another repository'
 inputs:
-  source-directory:
+  source_file:
     description: 'Source file from the origin directory'
     required: true
-  destination-repository-name:
+  destination_repo:
     description: 'Destination repository'
     required: true
-  destination-folder:
+  destination_folder:
     description: 'Directory to push the file to'
     required: false
-  user-email:
+  user_email:
     description: 'Email for the git commit'
     required: true
-  destination-github-username:
+  user_name:
     description: 'GitHub username for the commit'
     required: true
-  target-branch:
+  destination_branch:
     description: 'branch to push file to, defaults to main'
     required: false
-  destination-branch-create:
+  destination_branch_create:
     description: 'Destination branch to create for this commit'
     required: false
-  commit-message:
+  commit_message:
     description: 'A custom message for the commit'
     required: false
   rename:
     description: 'Rename the destination file'
     required: false
-  use-rsync:
+  use_rsync:
     description: 'Copy files/directories using rsync instead of cp. Experimental feature, please know your use case'
     required: false
-  git-server:
+  git_server:
     description: 'Git server host, default github.com'
     required: false
     default: github.com
@@ -39,17 +39,16 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - ${{ inputs.source-directory }}
-    - ${{ inputs.destination-repository-name }}
+    - ${{ inputs.source-file }}
+    - ${{ inputs.destination-repo }}
     - ${{ inputs.destination-folder }}
     - ${{ inputs.user-email }}
-    - ${{ inputs.destination-github-username }}
-    - ${{ inputs.target-branch }}
+    - ${{ inputs.destination-branch }}
     - ${{ inputs.destination-branch-create }}
     - ${{ inputs.commit-message }}
+    - ${{ inputs.git-server }}
     - ${{ inputs.rename }}
     - ${{ inputs.use-rsync }}
-        - ${{ inputs.git-server }}
 branding:
   icon: 'git-commit'
   color: 'green'
